fixing z-index in product category

--- a/src/assets/styles/cmps/AppHeader.css
+++ b/src/assets/styles/cmps/AppHeader.css
@@ -8,6 +8,7 @@
     top: 0;
     height: 5.5rem;
     background: var(--header-bgc);
+    z-index: 10;
 }
 
 .logo {
